--- a/chefs/chefs.html
+++ b/chefs/chefs.html
@@ -14,10 +14,41 @@
 
   <body>
     <div>
+      <header>
+        <nav class="navbar">
+          <img class="logo" src="./toque-c-est-moi-le-chef.png" />
+          <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <div class="navbar-links">
+            <ul>
+              <li>
+                <a class="active" href="../navAndHomepage/homepage.html"
+                  >Accueil</a
+                >
+              </li>
+              <li><a href="../chefs/chefs.html">L'equipe des chefs</a></li>
+              <li>
+                <a href="../recette/recette-boeuf-bourguignon.html"
+                  >Les recettes</a
+                >
+              </li>
+              <li><a href="../form/index.html">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
       <h1>NOS CHEFS</h1>
+      <h2 class="titre">
+        Choisissez UN Chef<br />
+        et<br />
+        découvrez UN univers.
+      </h2>
       <img src="image_chefs/im4.jpg" alt="PAUL BOCUSE" />
-      <img src="image_chefs/bouton.png" class="bouton" id="g" />
-      <img src="image_chefs/bouton.png" class="bouton" id="d" />
+      <img src="image_chefs/bouton.jpg" class="bouton" id="g" />
+      <img src="image_chefs/bouton.jpg" class="bouton" id="d" />
       <h2>PAUL</h2>
       <p>
         Paul est un Chef qu'on ne présente plus. Businessman bien entouré et
@@ -27,5 +58,15 @@
       </p>
       <hr />
     </div>
+    <footer>
+      <div class="footer-container">
+        <p>LES CUISTOS © 2022 Tous droits réservés.</p>
+        <p>
+          <a href="#">Mentions Legales</a>
+          <a href="#">Politique de Confidentialite</a>
+          <a href="#">Plan du Site</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
