--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -31,8 +31,18 @@
         </div>
       </nav>
     </header>
+    <section>
     <div class="cuistotsimg">
     <img src="lescuistots3.png" alt="lescuistots.png">
+    </div>
+    <div class="popup">
+      <p>
+        Tu es à la recherche du meilleur de la gastronomie française ?
+      </p>
+      <p>
+        Clique sur la région de ton choix et accède à nos recettes favorites !
+      </p>
+      <input type="submit" id="button" value="Commencer" />
     </div>
     <div class="map" id="map">
       <div class="map--image">
@@ -202,15 +212,6 @@
           </g>
         </svg>
       </div>
-      <div class="popup">
-        <p>
-          Tu es à la recherche du meilleur de la gastronomie française ?
-        </p>
-        <p>
-          Clique sur la région de ton choix et accède à nos recettes favorites !
-        </p>
-        <input type="submit" id="button" value="Commencer" />
-      </div>
     </div>
     <div class="info">
       <p>
@@ -220,6 +221,7 @@
         Clique sur la région de ton choix et accède à nos recettes favorites !
       </p>
     </div>
+  </section>
     <footer>
       <div class="footer-container">
         <p>LES CUISTOTS © 2022 Tous droits réservés.</p>
